--- a/my_first_page/meineErsteSeite.html
+++ b/my_first_page/meineErsteSeite.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testseite</title>
-    <link rel="stylesheet" href="../CSS/meineErsteSeite.css">
+    <link rel="stylesheet" href="meineErsteSeite.css">
 </head>
 <body>
     <!-- h = Überschrift 1-6 je nach Hx nur maximal x benutzen, kleiner reminder-->
