--- a/my_first_page/meineErsteSeite.html
+++ b/my_first_page/meineErsteSeite.html
@@ -19,7 +19,7 @@
     _top = ganzes Fenster
     telefonnummern mit Landvorwahl (Deutschland +49), in Mobil automatisch auf Anrufmenü
     -->
-    <a href="/HTML/meineZweiteSeite.html" 
+    <a href="meineZweiteSeite.html" 
     target="_blank">Seite 2 mit neuem Fenster</a>
     <a href="mailto:mail@an-die-ich-senden-will.de"> Schreiben Sie mir eine E-Mail</a>
     <a href="tel:+49132465789">Ruf mich an!</a>
